# web_jarvis_bot

./: MANIFEST.in  README.md  pyproject.toml  setup.py
Old version/: index.html
Old version/front-end/: main.css
Old version/src/: commands.py  server.py
front-end/: main.js
src/: main.py
web_jarvis_bot/: manage.py
web_jarvis_bot/web_jarvis_bot/: asgi.py  settings.py  urls.py  wsgi.py
